tests/examples/importing/ok/shoppingcart.si
import "share.setup.si"
import "user.si"
import "product.si"

service ShoppingCartService {

    config_server=share.setup.ConfigServer
    service_registry=share.setup.ServiceRegistry

    deployment {
        version="0.0.1"
        port=8082
        lang="java"
        packaging="jar"
        host=PC
        replicas=1
    }

    api {
        typedef ShoppingCart [
            str id
            str userId
            date date
            double sumPrice
            CartItem items
        ]

        typedef CartItem [
            str productId
            str productName
            int qty
            double productPrice
        ]

        @rest(method=POST)
        ShoppingCart createShoppingCart(ShoppingCart cart)
    }
}


dependency ShoppingCartService -> user.UserService {
    checkUser[fail_silent]
}


dependency ShoppingCartService -> product.ProductService {
    checkProduct[fail_silent]
}